[SNAPSHOT]
 * fix Salesforce API (thanks to https://github.com/jhorowitz-firedrum)
 * remove 'final' from methods in OAuth[10a|20]Service to allow mocking it
 * fix Pinterest API (thanks to https://github.com/sschwieb)
 * add Yahoo2 API (thanks to https://github.com/javatestcase)

[5.2.0-java7again]
 * allow 'null' as callback. It's an optional parameter. Remove "oob" as default (thanks to https://github.com/massongit)
 * java7 compatible again!

[5.1.0]
 * drop optional dependency on Apache commons-codec
 * add API - Dataporten (https://docs.dataporten.no/) (thanks to https://github.com/xibriz)
 * add API - Microsoft Azure Active Directory (Azure AD) (thanks to https://github.com/kaushalmall)
 * fix LinkedInApi20 (thanks to https://github.com/jhorowitz-firedrum)

[5.0.0]
 * drop Java 7 backward compatibility support, become Java 8 only
 * add JSON token extractor for OAuth 1.0a (thanks to https://github.com/evstropovv)
 * add new API - uCoz (https://www.ucoz.com/) (thanks to https://github.com/evstropovv)
 * add PKCE (RFC 7636) support (Proof Key for Code Exchange by OAuth Public Clients) (thanks for suggesting to https://github.com/dieseldjango)
 * switch to use HTTP Basic Authorization by default in requests with need of
   (2.3.  Client Authentication) https://tools.ietf.org/html/rfc6749#section-2.3 Can be overrided in API class
 * add support for client_credentials grant type (thanks to https://github.com/vivin)
 * add support for RFC 7009 OAuth 2.0 Token Revocation (thanks to https://github.com/vivin)
 * add OAuth2Service signRequest method accepting just String, not OAuth2 Access Token Object.
   Remove signRequest from abstract OAuthService. 2.0 and 1.0a will be a bit more different now.
 * drop toString method from *Tokens to prevent leak of sensible data (token ans secrets) (thanks to https://github.com/rcaa)
 * add Apache HttpComponents HttpClient support in separate module (thanks to https://github.com/sschwieb)