@@ -1,11 +1,10 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi10a;
-import com.github.scribejava.core.model.OAuth1RequestToken;
 
 public class EtsyApi extends DefaultApi10a {
 
-    private static final String AUTHORIZE_URL = "https://www.etsy.com/oauth/signin?oauth_token=%s";
+    private static final String AUTHORIZE_URL = "https://www.etsy.com/oauth/signin";
     private static final String ACCESS_TOKEN_URL = "https://openapi.etsy.com/v2/oauth/access_token";
     private static final String REQUEST_TOKEN_URL = "https://openapi.etsy.com/v2/oauth/request_token";
 
@@ -46,7 +45,7 @@ public class EtsyApi extends DefaultApi10a {
     }
 
     @Override
-    public String getAuthorizationUrl(OAuth1RequestToken requestToken) {
-        return String.format(AUTHORIZE_URL, requestToken.getToken());
+    public String getAuthorizationBaseUrl() {
+        return AUTHORIZE_URL;
     }
 }
