@@ -1,7 +1,6 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi10a;
-import com.github.scribejava.core.model.OAuth1RequestToken;
 
 /**
  * OAuth API for Flickr.
@@ -10,7 +9,7 @@ import com.github.scribejava.core.model.OAuth1RequestToken;
  */
 public class FlickrApi extends DefaultApi10a {
 
-    private static final String AUTHORIZE_URL = "https://www.flickr.com/services/oauth/authorize?oauth_token=%s";
+    private static final String AUTHORIZE_URL = "https://www.flickr.com/services/oauth/authorize";
 
     public enum FlickrPerm {
         READ, WRITE, DELETE
@@ -49,13 +48,9 @@ public class FlickrApi extends DefaultApi10a {
         return "https://www.flickr.com/services/oauth/access_token";
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public String getAuthorizationUrl(OAuth1RequestToken requestToken) {
-        final String authUrl = String.format(AUTHORIZE_URL, requestToken.getToken());
-        return permString == null ? authUrl : authUrl + "&perms=" + permString;
+    public String getAuthorizationBaseUrl() {
+        return permString == null ? AUTHORIZE_URL : AUTHORIZE_URL + "?perms=" + permString;
     }
 
     /**
