@@ -1,14 +1,13 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi10a;
-import com.github.scribejava.core.model.OAuth1RequestToken;
 import com.github.scribejava.core.model.OAuth1Token;
 
 public class NeteaseWeibooApi extends DefaultApi10a {
 
     private static final String REQUEST_TOKEN_URL = "http://api.t.163.com/oauth/request_token";
     private static final String ACCESS_TOKEN_URL = "http://api.t.163.com/oauth/access_token";
-    private static final String AUTHORIZE_URL = "http://api.t.163.com/oauth/authorize?oauth_token=%s";
+    private static final String AUTHORIZE_URL = "http://api.t.163.com/oauth/authorize";
     private static final String AUTHENTICATE_URL = "http://api.t.163.com/oauth/authenticate?oauth_token=%s";
 
     protected NeteaseWeibooApi() {
@@ -41,8 +40,8 @@ public class NeteaseWeibooApi extends DefaultApi10a {
      * @return url to redirect user to (to get code)
      */
     @Override
-    public String getAuthorizationUrl(OAuth1RequestToken requestToken) {
-        return String.format(AUTHORIZE_URL, requestToken.getToken());
+    public String getAuthorizationBaseUrl() {
+        return AUTHORIZE_URL;
     }
 
     /**
