@@ -1,7 +1,6 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi10a;
-import com.github.scribejava.core.model.OAuth1RequestToken;
 
 /**
  * OAuth API for Skyrock.
@@ -12,7 +11,7 @@ public class SkyrockApi extends DefaultApi10a {
 
     private static final String API_ENDPOINT = "https://api.skyrock.com/v2";
     private static final String REQUEST_TOKEN_RESOURCE = "/oauth/initiate";
-    private static final String AUTHORIZE_URL = "/oauth/authorize?oauth_token=%s";
+    private static final String AUTHORIZE_URL = "/oauth/authorize";
     private static final String ACCESS_TOKEN_RESOURCE = "/oauth/token";
 
     protected SkyrockApi() {
@@ -37,7 +36,7 @@ public class SkyrockApi extends DefaultApi10a {
     }
 
     @Override
-    public String getAuthorizationUrl(OAuth1RequestToken requestToken) {
-        return String.format(API_ENDPOINT + AUTHORIZE_URL, requestToken.getToken());
+    public String getAuthorizationBaseUrl() {
+        return API_ENDPOINT + AUTHORIZE_URL;
     }
 }
