@@ -1,11 +1,10 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi10a;
-import com.github.scribejava.core.model.OAuth1RequestToken;
 
 public class TwitterApi extends DefaultApi10a {
 
-    private static final String AUTHORIZE_URL = "https://api.twitter.com/oauth/authorize?oauth_token=%s";
+    private static final String AUTHORIZE_URL = "https://api.twitter.com/oauth/authorize";
     private static final String REQUEST_TOKEN_RESOURCE = "api.twitter.com/oauth/request_token";
     private static final String ACCESS_TOKEN_RESOURCE = "api.twitter.com/oauth/access_token";
 
@@ -31,8 +30,8 @@ public class TwitterApi extends DefaultApi10a {
     }
 
     @Override
-    public String getAuthorizationUrl(OAuth1RequestToken requestToken) {
-        return String.format(AUTHORIZE_URL, requestToken.getToken());
+    public String getAuthorizationBaseUrl() {
+        return AUTHORIZE_URL;
     }
 
     /**
@@ -42,7 +41,7 @@ public class TwitterApi extends DefaultApi10a {
      */
     public static class Authenticate extends TwitterApi {
 
-        private static final String AUTHENTICATE_URL = "https://api.twitter.com/oauth/authenticate?oauth_token=%s";
+        private static final String AUTHENTICATE_URL = "https://api.twitter.com/oauth/authenticate";
 
         private Authenticate() {
         }
@@ -56,8 +55,8 @@ public class TwitterApi extends DefaultApi10a {
         }
 
         @Override
-        public String getAuthorizationUrl(OAuth1RequestToken requestToken) {
-            return String.format(AUTHENTICATE_URL, requestToken.getToken());
+        public String getAuthorizationBaseUrl() {
+            return AUTHENTICATE_URL;
         }
     }
 }
