@@ -3,6 +3,7 @@
  * remove 'final' from methods in OAuth[10a|20]Service to allow mocking it
  * fix Pinterest API (thanks to https://github.com/sschwieb)
  * add Yahoo2 API (thanks to https://github.com/javatestcase)
+ * fix Tumblr urls, convert to https (thanks to https://github.com/highthunder)
 
 [5.2.0-java7again]
  * allow 'null' as callback. It's an optional parameter. Remove "oob" as default (thanks to https://github.com/massongit)
